lunch_check: Do not consider empty items

--- a/lunch_check/css/style.css
+++ b/lunch_check/css/style.css
@@ -6,3 +6,9 @@
     font-size: 1.5em;
     font-weight: bold;
 }
+
+.input-example {
+    border: solid 1px;
+    color: blue;
+    font-family: monospace;
+}
